# component-bigquery-byodb-view-writer

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: component.py  view_creator.py
src/google_cloud/: bigquery_client.py
