[project]
name = "component-bigquery-byodb-view-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freezegun~=1.5.1",
    "google-auth>=2.29.0",
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-resource-manager>=1.14.2",
    "kbcstorage",
    "keboola-component>=1.6.10",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock~=5.1.0",
]

[tool.uv.sources]
kbcstorage = { git = "https://github.com/keboola/sapi-python-client.git" }
